<resources>
    <string name="app_names">Java️Ctlscc ✔ ️rfo</string>
   <string name="projects">🅿️ Projects</string>
   <string name="Poke"></string>
   <string name="poke1_hello">Hello Poke1</string>
	<string name="edit1"></string>
   	<string name="editmain"></string>
	<string name="cprogs"></string>
	<string name="secintext"></string>
	<string name="FList2"></string>
    <string name="BList2"></string>
    <string name="tv_schk"></string>
    <string name="hello_world2">Hello World!\n\nHello World!</string>
	<string name="hello_world1">...</string>
    <string name="Device_Info"></string>
    <string name="app_name1">0123456789</string>
	<string name="dirUnZip"></string>
    <string name="hello">Hello World, JavaCtlscc-rfo</string>
    <string name="editor_name">Editor</string>
<string name="about_name">About JavaCtlscc-rfo</string>
<string name="load_name">Load File</string>
    <string name="delete_name">Delete File</string>
    <string name="help_name">Commands</string>
<string name="settings_name">Preferences</string>
    <string name="search_name">Search</string>
    <string name="format_name">Format</string>
    <string name="gr_name">Graphics</string>
    <string name="debug_name">Debugger</string>
    <string name="play_sound_name"> </string>
    <string name="select_device"> Select Device</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="none_found">None Found</string>
    <string name="scanning">Scanning</string>
    <string name="intro_getline">Shortcut Builder</string>
    <string name="enter_text_label">File Name</string>
    <string name="edit_button_label">Edit</string>
    <string name="delete_button_label">Delete</string>
    <string name="enter_text2_label">Icon File Name</string>
    <string name="enter_text3_label">Shortcut Name</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="ok_button_label">OK</string>
    <string name="yes_button_label">Yes</string>
    <string name="no_button_label">No</string>
    <string name="choose_one">Choose one</string>
    <string name="hex_color">Enter a hex color value</string>
    <string name="color_chars">0123456789abcdefxABCDEFX#</string>
    <string name="stt_prompt">"Speech To Text"</string>
	<string name="setcolorpath">Set Color • Path</string>
	<string name="pathrun">ed•Run</string>
	<string name="ift">iFT</string>
	<string name="expedit">📝</string>
	<string name="run">Run</string>
	<string name="load">Load</string>
	<string name="save">Save</string>
	<string name="delete">Delete</string>
	<string name="search">🔍</string>
	<string name="goto1">Go</string>
	<string name="format">Format</string>
	<string name="clear">🆑</string>
	<string name="load_run">LRun</string>
	<string name="save_run">sRun</string>
	<string name="settings">Preferences</string>
	<string name="spawn">Create Application</string>
	<string name="help">Commands</string>
	<string name="about">About</string>
	<string name="internal">internal version +</string>
	<string name="exit">Exit</string>
	<string name="stop">Stop</string>
	<string name="editor">Editor</string>
	<string name="pause">Pause</string>
	<string name="pref_MAB_svrun_key">editor_menu_svrun_on_action_bar</string>
	<string name="pref_MAB_svrun_title">Save and RUN on action bar</string>
	<string name="pref_MAB_svrun_summary">Show sRUN on action bar if it fits</string>
	<string name="pref_MAB_expedit_key">editor_menu_expedit_on_action_bar</string>
	<string name="pref_MAB_expedit_title">Exp Editor on action bar</string>
	<string name="pref_MAB_expedit_summary">Show eEd on action bar if it fits</string>
	<string name="pref_MAB_ift_key">editor_menu_ift_on_action_bar</string>
	<string name="pref_MAB_ift_title">internal File Tool on action bar</string>
	<string name="pref_MAB_ift_summary">Show iFT on action bar if it fits</string>
	<string name="pref_MAB_parun_key">editor_menu_parun_on_action_bar</string>
	<string name="pref_MAB_parun_title">Path Load and Run on action bar</string>
	<string name="pref_MAB_parun_summary">Show pRun on action bar if it fits</string>
	<string name="pref_MAB_loadrun_key">editor_menu_loadrun_on_action_bar</string>
	<string name="pref_MAB_loadrun_title">Load and Run on action bar</string>
	<string name="pref_MAB_loadrun_summary">Show LRun on action bar if it fits</string>
	<string name="pref_MAB_key">editor_items_on_action_bar</string>
	<string name="pref_MAB_title">Menu Items on Action Bar</string>
	<string name="pref_MAB_summary">Editor menu items to show on action bar</string>
	<string name="pref_MAB_run_key">editor_menu_run_on_action_bar</string>
	<string name="pref_MAB_run_title">RUN on action bar</string>
	<string name="pref_MAB_run_summary">Show RUN on action bar if it fits</string>
	<string name="pref_MAB_load_key">editor_menu_load_on_action_bar</string>
	<string name="pref_MAB_load_title">LOAD on action bar</string>
	<string name="pref_MAB_load_summary">Show LOAD on action bar if it fits</string>
	<string name="pref_MAB_save_key">editor_menu_save_on_action_bar</string>
	<string name="pref_MAB_save_title">SAVE on action bar</string>
	<string name="pref_MAB_save_summary">Show SAVE on action bar if it fits</string>
	<string name="pref_MAB_goto_key">editor_menu_goto_on_action_bar</string>
	<string name="pref_MAB_goto_title">Goto Line on action bar</string>
	<string name="pref_MAB_goto_summary">Show Go on action bar if it fits</string>
	<string name="pref_MAB_clear_key">editor_menu_clear_on_action_bar</string>
	<string name="pref_MAB_clear_title">CLEAR on action bar</string>
	<string name="pref_MAB_clear_summary">Show 🆑 on action bar if it fits</string>
	<string name="pref_MAB_search_key">editor_menu_search_on_action_bar</string>
	<string name="pref_MAB_search_title">SEARCH on action bar</string>
	<string name="pref_MAB_search_summary">Show 🔍 on action bar if it fits</string>
	<string name="pref_MAB_exit_key">editor_menu_exit_on_action_bar</string>
	<string name="pref_MAB_exit_title">EXIT on action bar</string>
	<string name="pref_MAB_exit_summary">Show EXIT on action bar if it fits</string>
	<string name="no_prog_name">You have not entered a program name.</string>
	<string name="no_icon_name">You have not entered an icon file name.</string>
	<string name="no_shortcut_name">You have not entered a name for the shortcut.</string>
	<string name="no_prog_file">The program file does not exist (you can create it later).</string>
	<string name="no_icon_file">The icon file does not exist.</string>
	<string name="no_icon">Could not create icon from icon file.</string>
	<string name="instr_1">Select Cancel to go back to setup</string>
	<string name="instr_2">or OK to try to create the shortcut anyway.</string>
    <string name="about_text1">%s ML • Java️Ctlscc ✔ ️rfo</string>
    <string name="about_text2">\nbase rfo, created by Paul Laughton.\n</string>
	    <string name="about_text3">\nBuilt for Humanoid, simulation control code.\njava ctl scc, 202405+\n\n\n</string>
	<string name="about_text_btn_forum">User Forum</string>
	<string name="about_text_btn_programs">Users\' Programs\nWritten by members of the user forum</string>
	<string name="about_text_btn_github">GitHub\nSource and bug reports</string>
	<string name="about_text_btn_license">Open-Source License\nThe GNU General Public License, version 3</string>
    <string name="about_text_btn_tele1">\'Phone ide support Tools\'\n(English) Telegram Channel + Group</string>
    <string name="about_text_btn_tele">\'KeDeHun ide\' • Humanoid\n(Korean) Telegram Channel + Group</string>
    <string name="about_text_btn_tele2">\'KedeHun\' ide • Reference\n(Korean) Telegram Channel + Group</string>
	<string name="Color_Scheme">Color Scheme</string>
	<string name="Select_Color_Scheme">Select Color Scheme</string>
	<string name="Custom_Colors">Custom Colors</string>
	<string name="Define_Your_Own_Colors">Define Your Own Colors</string>
	<string name="Screen_Colors">Screen Colors</string>
	<string name="Select_a_color_scheme_or_custom_colors">Select a color scheme or custom colors</string>
	<string name="Text_Color">Text Color</string>
	<string name="Set_Text_Color">Set Text Color</string>
	<string name="Background_Color">Background Color</string>
	<string name="Line_Color">Line Color</string>
	<string name="Set_Background_Color">Set Background Color</string>
	<string name="Set_Line_Color">Set Line Color</string>
	<string name="Highlight_Color">Highlight Color</string>
	<string name="Set_Highlight_Color">Set Highlight Color</string>
	<string name="Console_Settings">Console Settings</string>
	<string name="Setting_for_Console_and_Other_Text_Screens">Settings for Console and Other Text Screens</string>
	<string name="Font_Size">Font Size</string>
	<string name="Select_Font_Size_for_Console">Select Font Size for Console, etc.</string>
	<string name="Type_face">Typeface</string>
	<string name="Select_Typeface_for_Consol">Select Typeface for Console, etc.</string>
	<string name="Console_Menu">Console Menu</string>
	<string name="Display_Menu_in_Console_and_TGet">Display Menu in Console and TGet</string>
	<string name="Console_Lines">Console Lines</string>
	<string name="Use_Lined_Console">Use Lined Console</string>
	<string name="Empty_Console_Color">Empty Console Color</string>
	<string name="Select_Color_of_Unwritten_Console_Lines">Select Color of Unwritten Console Lines</string>
	<string name="Editor_Settings">Editor Settings</string>
	<string name="Settings_for_Program_Editor">Settings for Program Editor</string>
	<string name="Editor_Lines">Editor Lines</string>
	<string name="Use_Lined_Editor">Use Lined Editor</string>
	<string name="Editor_Line_Wrap">Editor Line Wrap</string>
	<string name="Wrap_Long_Editor_Lines">Wrap Long Editor Lines</string>
	<string name="Editor_AutoIndent">Editor AutoIndent</string>
	<string name="Enable_Editor_AutoIndent">Enable Editor AutoIndent</string>
	<string name="Screen_Orientation">Screen Orientation</string>
	<string name="Select_Orientation">Select Orientation</string>
	<string name="Graphic_acceleration">Graphic acceleration</string>
	<string name="Enable_graphic_acceleration">Enable graphic acceleration</string>
	<string name="Base_Drive">Base Drive</string>
	<string name="Select_New_Base_Drive">Select New Base Drive</string>
	<string name="Search_For">Search For:</string>
	<string name="Replace_With">Replace With:</string>
	<string name="Next">Next</string>
	<string name="Done">Done</string>
	<string name="Replace">Replace</string>
	<string name="Replace_All">Replace All</string>
	<string name="Finished">Finished</string>
	<string name="unnamed_program">*.*</string>
	<string name="Select_File_To_Load">Select File To Load</string>
	<string name="Select_file_to_Delete">Select file to Delete</string>
	<string name="Save_to_FILENAMEARG">Save to %1$s</string>
	<string name="Saved_FILENAMEARG">Saved %1$s</string>
	<string name="File_not_saved">File not saved:</string>
	<string name="Format_your_program">Format your program?</string>
	<string name="Confirm_Delete">Confirm Delete</string>
	<string name="Current_Program_Not_Saved">Current Program Not Saved!</string>
	<string name="Continue">Continue</string>
	<string name="Syntax_Error">Syntax Error</string>
	<string name="Nothing_to_execute">Nothing to execute.</string>
	<string name="Program_ended_with_FOR_without_NEXT">Program ended with FOR without NEXT</string>
	<string name="Program_ended_with_WHILE_without_REPEAT">Program ended with WHILE without REPEAT</string>
	<string name="Program_ended_with_DO_without_UNTIL">Program endedb with DO without UNTIL</string>
	<string name="Execution_halted">Execution halted</string>
	<string name="Stopped_by_user">Stopped by user.</string>
	<string name="Bluetooth_not_connected">Bluetooth not connected</string>
	<string name="Not_previously_connected">Not previously connected</string>
</resources>